# TailsitterRL

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Justfile  README.md  ToDos.md  Todo.md  environment.yml  pyproject.toml
.pre-commit-cache/: db.db
docs/: bptt_2nd_inner_system.ipynb  bptt_robust_testing.py  damped_systems.ipynb  damped_systems.typ  design.typ  dynamics.md  symbols.typ
logs/bptt_hover/: training_log.csv
tmux_config/: agents.yaml
vtol_rl/config/: __init__.py
vtol_rl/config/drone/: drone_d435i.json  drone_state.json  example.json
vtol_rl/envs/: CatchEnv.py  DynamicEnv.py  HoverEnv.py  LandingEnv.py  MultiNavigationEnv.py  NavigationEnv.py  RacingEnv.py  TailsitterEnv.py  TrackingEnv.py  multiDroneGymEnv.py
vtol_rl/envs/base/: controller.py  droneEnv.py  droneGymEnv.py  dynamics.py  tailsitterGymEnvs.py  tailsitter_dynamics.py  toy_second_order_system.py
vtol_rl/experiments/: __init__.py  hover_bptt.py
vtol_rl/tests/: test.py  test_distributions_utils.py  test_dynamics_shapes.py  test_hover_env.py  test_quaternion.py  test_stablebaseline.py
vtol_rl/utils/: ObjectManger.py  PID_alignment.py  SceneManager.py  common.py  dataloader.py  evaluate.py  launcher.py  maths.py  pathFinder.py  randomization.py  savers.py  type.py
vtol_rl/utils/algorithms/: BPTT.py  PPO.py  SAC.py  common.py  dl_algorithm.py  lr_scheduler.py  shac.py
vtol_rl/utils/datasets/: datasets.py  square.py
vtol_rl/utils/policies/: common.py  dl_policies.py  dm_policies.py  extractors.py  policies.py  sac_polices.py  td_policies.py
vtol_rl/utils/tools/: depth_collect.py  train_encoder.py
