[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Hanamy", email = "rongerch@outlook.com"},
]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "scikit-learn",
  "seaborn",
  "sympy",
  "control",
  "gymnasium",
  "ipykernel",
  "notebook",
  "jupyter",
  "jupyter_client",
  "jupyter_core",
  "traitlets",
  "ipywidgets>=8,<9",
]
description = "Reinforcement Learning for Tailsitter UAVs"
license = {text = "MIT"}
name = "vtol_rl"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
dev-dependencies = [
  "ruff",
  "pre-commit",
]
